<resources>
    <string name="app_name">ScooterAPP</string>

    <!-- Login -->
    <string name="emailHint">Email</string>
    <string name="passHint">Password</string>
    <string name="registrarse">Crear una nueva cuenta</string>
    <string name="forgot_pass"><u>¿Has olvidado tu contraseña?</u></string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="not_account">¿Aún sin cuenta?</string>
    <string name="error_nick">Debes introducir el nick</string>
    <string name="error_pass">Debes introducir la pass</string>
    <!-- Register -->
    <string name="terminos_condiciones">He leido y acepto los términos y condiciones.</string>
    <string name="repeat_pass">Repite contraseña</string>
    <string name="pass_register">Contraseña</string>
    <string name="nick_register">nick</string>
    <string name="apellidos_register">Apellidos</string>
    <string name="nombre_register">Nombre</string>
    <string name="create_account_register">Crear una nueva cuenta</string>

    <!-- Navigation Strings -->
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="nav_header_title">Pepito Perez</string>
    <string name="nav_header_subtitle">pepito.perez@outlook.com</string>
    <string name="nav_header_desc">Cabecera</string>
    <string name="action_settings">Cambiar IP</string>

    <!-- Alquiler -->
    <string name="alquiler_reserva_titulo">Tiempo restante:</string>
    <string name="alquiler_alquiler_titulo">Tiempo alquiler:</string>

    <!-- Fragments -->
    <string name="fragment_map">mapa</string>
    <string name="fragment_perfil">perfil</string>
    <string name="fragment_incidencia">incidencia</string>
    <string name="fragment_parte">parte</string>
    <string name="fragment_pack">pack</string>
    <string name="fragment_help">help</string>
    <string name="fragment_camera">camera</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map_test">Map</string>
    <string name="title_activity_maps_test2">Map</string>
</resources>
