<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!-- Incluyo mi propio toolbar genérico -->
    <include layout="@layout/default_toolbar" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PLACEHOLDER DE MI LOGO"
                android:textSize="20dp"
                android:textStyle="bold"
                android:padding="50dp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailHint"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/myedittext"
                android:padding="10dp"
                android:inputType="text" />

            <EditText
                android:id="@+id/passLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passHint"
                android:background="@drawable/myedittext"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textEmailAddress"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:style="@style/DefaultButton"
                android:layout_marginBottom="5dp"
                android:text="@string/iniciar_sesion"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:style="@style/Link"
                android:text="@string/forgot_pass"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/primaryColor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textColor="@color/onBackground"
                android:textSize="10dp"
                android:textStyle="bold"
                android:text="@string/not_account"
                android:layout_marginStart="30dp" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:style="@style/DefaultButton"
                android:layout_marginTop="10dp"
                android:text="@string/registrarse"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>